add: recovery one more time hehehe, manu... fuck you

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -343,10 +343,12 @@
     "Menu": {
       "Home": "Home",
       "Profile": "Profile",
+      "Wallet": "Wallet",
       "Settings": "Settings",
       "Logout": "Log out"
     },
     "Index": {
+      "Loading": "Loading",
       "Buttons": {
         "CryptoMarkt": "Cypto markt",
         "Buy": "Buy",
